add gradient div on homePage & refactor style

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -220,6 +220,9 @@
         padding: 0 5px
         margin-left: 0
 
+      a
+        text-decoration: none
+
       span
         color: #337ab7
         font-size: 14px
@@ -251,4 +254,3 @@
       letter-spacing: 0.3px
       color: lightyellow
       text-decoration: underline
-
