--- a/client/src/pages/Home/Home.module.sass
+++ b/client/src/pages/Home/Home.module.sass
@@ -1,4 +1,6 @@
-@mixin stepCard
+$greenColor: #28D2D1
+
+%stepCard
   display: flex
   flex-direction: column
   justify-content: flex-start
@@ -192,7 +194,7 @@
     padding: 40px 0
 
     div
-      @include stepCard
+      @extend %stepCard
 
     @media screen and (max-width: 823px)
       display: flex
@@ -206,11 +208,11 @@
 
 
 .whiteStep
-  @include stepCard
+  @extend %stepCard
 
 
 .greenStep
-  @include stepCard
+  @extend %stepCard
   color: white
 
 
@@ -258,7 +260,7 @@
   padding: 40px 0
 
   div
-    @include stepCard
+    @extend %stepCard
 
   @media screen and (max-width: 950px)
     padding: 0
@@ -379,8 +381,8 @@
   flex-direction: row
   justify-content: center
   align-items: center
-  color: #28D2D1
-  border: 2px solid #28D2D1
+  color: $greenColor
+  border: 2px solid $greenColor
   border-radius: 5px
   height: 60px
   cursor: pointer
@@ -408,6 +410,45 @@
 
   &:hover
     color: white
-    background-color: #28D2D1
+    background-color: $greenColor
+  
+.startContestContainer  
+  display: flex
+  align-items: center
+  justify-content: space-between
+  background-image: linear-gradient(30deg,rgba(25,160,255,.85) 0%,rgba(45,21,130,.9) 100%);
+  max-width: 1100px
+  width: 90vw
+  padding: 1.5rem
+  font-family: "Poppins", Helvetica, Arial, sans-serif
+  font-size: 16px
+  font-weight: 300
 
+  span
+    color: white
+    padding: 0 15px
+    
+  a
+    text-decoration: none
+    min-width: 9rem
+    text-align: center
+    margin-left: auto
+    background-color: white
+    cursor: pointer
+    padding: 12px 16px
+    transition: all 0.2s ease-in-out
 
+    span
+      color: black
+
+    &:hover
+      transform: translateY(-3px)
+      box-shadow: 0 4px 11px rgba(255, 255, 255, 0.35)  
+
+  @media screen and (max-width: 575px) 
+    flex-direction: column
+    span
+      padding: 0 0 15px 0
+    a
+      width: 90%  
+      margin: 0 auto
