--- a/client/src/components/RegistrationForm/RegistrationForm.module.sass
+++ b/client/src/components/RegistrationForm/RegistrationForm.module.sass
@@ -55,18 +55,18 @@
     margin-bottom: 10px
 
 
-    .fieldWarning
-      font-size: 15px
-      display: flex
-      flex-direction: row
-      justify-content: center
-      align-items: center
-      color: white
-      border: 1px solid #b72522
-      margin-bottom: 15px
-      padding-bottom: 5px
-      padding-top: 5px
-      text-align: center
+    // .fieldWarning
+    //   font-size: 15px
+    //   display: flex
+    //   flex-direction: row
+    //   justify-content: center
+    //   align-items: center
+    //   color: white
+    //   border: 1px solid #b72522
+    //   margin-bottom: 15px
+    //   padding-bottom: 5px
+    //   padding-top: 5px
+    //   text-align: center
 
     @media(max-width: 850px)
       align-self: auto
@@ -105,6 +105,7 @@
       width: auto
 
     .inputContainer
+      position: relative
       display: flex
       flex-direction: column
       justify-content: center
@@ -114,6 +115,12 @@
       flex: 1 1
 
       .fieldWarning
+        position: absolute
+        bottom: -0.8rem
+        border-radius: 5%
+        right: 0
+        width: 60%
+        background-color: #f39595
         font-size: 15px
         display: flex
         flex-direction: row
@@ -129,6 +136,7 @@
     .input
       background-color: white
       border: none
+      border: 2px solid white
       border-radius: 4px
       color: #9ca8b7
       font-size: 18px
