--- a/client/src/components/RegistrationForm/RegistrationForm.module.sass
+++ b/client/src/components/RegistrationForm/RegistrationForm.module.sass
@@ -42,6 +42,19 @@
   margin-left: 20px
   margin-bottom: 10px
 
+  .fieldWarning
+      font-size: 15px
+      display: flex
+      flex-direction: row
+      justify-content: center
+      align-items: center
+      color: white
+      border: 1px solid #b72522
+      margin-bottom: 15px
+      padding-bottom: 5px
+      padding-top: 5px
+      text-align: center
+      
   @media(max-width: 850px)
     align-self: auto
 
